refactor: 增强 SpEL 和 JavaScript 表达式安全性，优化聊天消息处理和 RAG 服务逻辑