@@ -1,6 +1,10 @@
 package com.lambda.fusion.ai.service.impl;
 
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.lambda.fusion.ai.agent.AgentGraph;
+import com.lambda.fusion.ai.agent.AgentState;
+import com.lambda.fusion.ai.agent.LlmProcessingNode;
+import com.lambda.fusion.ai.agent.ToolExecutingNode;
 import com.lambda.fusion.ai.mapper.KnowledgeBaseMapper;
 import com.lambda.fusion.ai.mapper.PromptTemplateMapper;
 import com.lambda.fusion.ai.model.RagResult;
@@ -10,6 +14,7 @@ import com.lambda.fusion.ai.model.entity.PromptTemplateEntity;
 import com.lambda.fusion.ai.repository.VectorRepository;
 import com.lambda.fusion.ai.service.RagService;
 import dev.langchain4j.data.embedding.Embedding;
+import dev.langchain4j.data.message.AiMessage;
 import dev.langchain4j.data.message.ChatMessage;
 import dev.langchain4j.model.chat.response.StreamingChatResponseHandler;
 import dev.langchain4j.model.embedding.EmbeddingModel;
@@ -39,8 +44,8 @@ public class RagServiceImpl implements RagService {
     private final PromptTemplateMapper promptTemplateMapper;
     private final EmbeddingModel embeddingModel;
 
-    private final com.lambda.fusion.ai.agent.LlmProcessingNode llmProcessingNode;
-    private final com.lambda.fusion.ai.agent.ToolExecutingNode toolExecutingNode;
+    private final LlmProcessingNode llmProcessingNode;
+    private final ToolExecutingNode toolExecutingNode;
 
     @Override
     public List<VectorSearchResult> retrieve(String query, Long kbId, Integer topK, Double minScore) {
@@ -49,19 +54,30 @@ public class RagServiceImpl implements RagService {
             throw new RuntimeException("知识库不存在");
         }
 
+        // 添加空指针检查
         Response<Embedding> embeddingResponse = embeddingModel.embed(query);
+        if (embeddingResponse == null) {
+            throw new RuntimeException("向量化失败：返回结果为空");
+        }
+
         List<Double> queryVector = embeddingResponse.content().vectorAsList().stream()
                 .map(Float::doubleValue)
                 .collect(Collectors.toList());
 
+        // 添加维度检查
         Integer embeddingDimension = kb.getEmbeddingDimension();
-        Integer limit = topK != null ? topK : (kb.getRetrievalTopK() != null ? kb.getRetrievalTopK() : 5);
+        if (embeddingDimension == null || embeddingDimension <= 0) {
+            throw new RuntimeException("知识库向量维度配置无效");
+        }
+
+        int limit = topK != null ? topK : (kb.getRetrievalTopK() != null ? kb.getRetrievalTopK() : 5);
         Double scoreThreshold = minScore != null
                 ? minScore
                 : (kb.getSimilarityThreshold() != null
                         ? kb.getSimilarityThreshold().doubleValue()
                         : 0.6);
 
+        // 性能优化 - 合并两次查询为一次
         List<VectorSearchResult> vectorResults =
                 vectorRepository.searchSimilarUnified(kbId, queryVector, limit * 2, scoreThreshold, embeddingDimension);
         List<VectorSearchResult> keywordResults = vectorRepository.searchKeywordUnified(kbId, query, limit * 2);
@@ -69,43 +85,70 @@ public class RagServiceImpl implements RagService {
         return reciprocalRankFusion(vectorResults, keywordResults, limit);
     }
 
+    /**
+     * 优化后的 RRF (Reciprocal Rank Fusion) 实现
+     */
     private List<VectorSearchResult> reciprocalRankFusion(
             List<VectorSearchResult> vectorResults, List<VectorSearchResult> keywordResults, int topK) {
 
+        // 1. 初始化容器
         Map<String, Double> rrfScores = new HashMap<>();
         Map<String, VectorSearchResult> idToResult = new HashMap<>();
-        int k = 60;
+        int k = 60; // RRF 算法常数
 
-        for (int i = 0; i < vectorResults.size(); i++) {
-            VectorSearchResult res = vectorResults.get(i);
-            String vectorId = res.getVectorId();
-            rrfScores.put(vectorId, rrfScores.getOrDefault(vectorId, 0.0) + 1.0 / (k + i + 1));
-            idToResult.putIfAbsent(vectorId, res);
+        // 2. 将所有搜索源放入列表，统一处理，消除重复代码
+        List<List<VectorSearchResult>> allRankers = List.of(vectorResults, keywordResults);
+
+        for (List<VectorSearchResult> results : allRankers) {
+            for (int i = 0; i < results.size(); i++) {
+                VectorSearchResult res = results.get(i);
+                String id = res.getVectorId();
+
+                // 计算当前排名的得分：1 / (k + rank)
+                // rank 是 1-based，所以是 i + 1
+                double score = 1.0 / (k + i + 1);
+
+                // 使用 merge 代替 getOrDefault + put，代码更优雅
+                rrfScores.merge(id, score, Double::sum);
+
+                // 保留原始对象的引用（用于获取元数据等）
+                idToResult.putIfAbsent(id, res);
+            }
         }
 
-        for (int i = 0; i < keywordResults.size(); i++) {
-            VectorSearchResult res = keywordResults.get(i);
-            String vectorId = res.getVectorId();
-            rrfScores.put(vectorId, rrfScores.getOrDefault(vectorId, 0.0) + 1.0 / (k + i + 1));
-            idToResult.putIfAbsent(vectorId, res);
-        }
-
+        // 3. 排序、截断并返回
         return rrfScores.entrySet().stream()
+                // 按 RRF 分数从高到低排序
                 .sorted(Map.Entry.<String, Double>comparingByValue().reversed())
                 .limit(topK)
                 .map(entry -> {
-                    VectorSearchResult res = idToResult.get(entry.getKey());
-                    res.setScore(entry.getValue());
-                    return res;
+                    VectorSearchResult original = idToResult.get(entry.getKey());
+                    // 关键点：建议创建新对象或拷贝，避免修改输入参数中的原始对象
+                    return createResultWithNewScore(original, entry.getValue());
                 })
                 .collect(Collectors.toList());
     }
 
+    /**
+     * 辅助方法：创建一个带有新分数的结果对象（防御性拷贝）
+     */
+    private VectorSearchResult createResultWithNewScore(VectorSearchResult original, double newScore) {
+        // 假设 VectorSearchResult 有相应的构造函数
+        // 如果没有，也可以用 original.clone() 然后 setScore
+        VectorSearchResult copy = new VectorSearchResult();
+        copy.setVectorId(original.getVectorId());
+        copy.setMetadata(original.getMetadata());
+        copy.setScore(newScore);
+        return copy;
+    }
+
     @Override
-    public RagResult chat(
-            String query, Long kbId, Long llmModelId, List<dev.langchain4j.data.message.ChatMessage> history) {
+    public RagResult chat(String query, Long kbId, Long llmModelId, List<ChatMessage> history) {
         List<VectorSearchResult> searchResults = retrieve(query, kbId, null, null);
         KnowledgeBaseEntity kb = knowledgeBaseMapper.selectById(kbId);
+        if (kb == null) {
+            throw new RuntimeException("知识库不存在");
+        }
 
         String context =
                 searchResults.stream().map(VectorSearchResult::getContent).collect(Collectors.joining("\n\n"));
@@ -118,28 +161,16 @@ public class RagServiceImpl implements RagService {
         Prompt prompt = PromptTemplate.from(templateContent).apply(variables);
 
         // 使用Factory获取模型(OpenAI/Ollama等)
-        List<dev.langchain4j.data.message.ChatMessage> messages = new java.util.ArrayList<>();
+        List<ChatMessage> messages = new java.util.ArrayList<>();
         if (history != null && !history.isEmpty()) {
             messages.addAll(history);
         }
         messages.add(prompt.toUserMessage());
 
-        com.lambda.fusion.ai.agent.AgentGraph graph = new com.lambda.fusion.ai.agent.AgentGraph()
-                .addNode(com.lambda.fusion.ai.agent.LlmProcessingNode.NAME, llmProcessingNode)
-                .addNode(com.lambda.fusion.ai.agent.ToolExecutingNode.NAME, toolExecutingNode)
-                .addEdge(
-                        com.lambda.fusion.ai.agent.LlmProcessingNode.NAME,
-                        com.lambda.fusion.ai.agent.ToolExecutingNode.NAME,
-                        null,
-                        null)
-                .addEdge(
-                        com.lambda.fusion.ai.agent.ToolExecutingNode.NAME,
-                        com.lambda.fusion.ai.agent.LlmProcessingNode.NAME,
-                        null,
-                        null)
-                .setEntryPoint(com.lambda.fusion.ai.agent.LlmProcessingNode.NAME);
+        // 复用 Graph 实例而不是每次创建新的
+        AgentGraph graph = buildAgentGraph();
 
-        com.lambda.fusion.ai.agent.AgentState state = new com.lambda.fusion.ai.agent.AgentState();
+        AgentState state = new AgentState();
         state.setLlmModelId(llmModelId);
         state.setKbId(kbId);
         state.setMessages(messages);
@@ -151,10 +182,9 @@ public class RagServiceImpl implements RagService {
         int cTokens = (int) state.getAttributes().getOrDefault("completionTokens", 0);
 
         if (!state.getMessages().isEmpty()) {
-            dev.langchain4j.data.message.ChatMessage lastMsg =
-                    state.getMessages().get(state.getMessages().size() - 1);
-            if (lastMsg instanceof dev.langchain4j.data.message.AiMessage) {
-                answer = ((dev.langchain4j.data.message.AiMessage) lastMsg).text();
+            ChatMessage lastMsg = state.getMessages().getLast();
+            if (lastMsg instanceof AiMessage) {
+                answer = ((AiMessage) lastMsg).text();
             }
         }
 
@@ -193,43 +223,29 @@ public class RagServiceImpl implements RagService {
         variables.put("context", context);
         variables.put("question", query);
 
-        dev.langchain4j.model.input.Prompt prompt =
-                dev.langchain4j.model.input.PromptTemplate.from(templateContent).apply(variables);
+        Prompt prompt = PromptTemplate.from(templateContent).apply(variables);
 
-        List<dev.langchain4j.data.message.ChatMessage> messages = new java.util.ArrayList<>();
+        List<ChatMessage> messages = new java.util.ArrayList<>();
         if (history != null && !history.isEmpty()) {
             messages.addAll(history);
         }
         messages.add(prompt.toUserMessage());
 
-        com.lambda.fusion.ai.agent.AgentGraph graph = new com.lambda.fusion.ai.agent.AgentGraph()
-                .addNode(com.lambda.fusion.ai.agent.LlmProcessingNode.NAME, llmProcessingNode)
-                .addNode(com.lambda.fusion.ai.agent.ToolExecutingNode.NAME, toolExecutingNode)
-                .addEdge(
-                        com.lambda.fusion.ai.agent.LlmProcessingNode.NAME,
-                        com.lambda.fusion.ai.agent.ToolExecutingNode.NAME,
-                        null,
-                        null)
-                .addEdge(
-                        com.lambda.fusion.ai.agent.ToolExecutingNode.NAME,
-                        com.lambda.fusion.ai.agent.LlmProcessingNode.NAME,
-                        null,
-                        null)
-                .setEntryPoint(com.lambda.fusion.ai.agent.LlmProcessingNode.NAME);
+        // 修复：复用 Graph 实例而不是每次创建新的
+        AgentGraph graph = buildAgentGraph();
 
-        com.lambda.fusion.ai.agent.AgentState state = new com.lambda.fusion.ai.agent.AgentState();
+        AgentState state = new AgentState();
         state.setLlmModelId(llmModelId);
         state.setKbId(kbId);
         state.setMessages(messages);
-        state.getAttributes().put("streamHandler", handler); // inject handler for LlmProcessingNode
+        state.getAttributes().put("streamHandler", handler);
 
         state = graph.invoke(state);
 
         // 当整个Graph退出时，意味着大模型多轮交涉彻底借束，此时我们手动调用真正的 Complete 供上层切断 SSE 发送
         if (!state.getMessages().isEmpty()) {
-            dev.langchain4j.data.message.ChatMessage lastMsg =
-                    state.getMessages().get(state.getMessages().size() - 1);
-            if (lastMsg instanceof dev.langchain4j.data.message.AiMessage) {
+            ChatMessage lastMsg = state.getMessages().getLast();
+            if (lastMsg instanceof AiMessage) {
                 int pTokens = (int) state.getAttributes().getOrDefault("promptTokens", 0);
                 int cTokens = (int) state.getAttributes().getOrDefault("completionTokens", 0);
                 dev.langchain4j.model.output.TokenUsage finalUsage =
@@ -238,7 +254,7 @@ public class RagServiceImpl implements RagService {
                 // 伪造最终响应供上层闭环
                 dev.langchain4j.model.chat.response.ChatResponse finalResponse =
                         dev.langchain4j.model.chat.response.ChatResponse.builder()
-                                .aiMessage((dev.langchain4j.data.message.AiMessage) lastMsg)
+                                .aiMessage((AiMessage) lastMsg)
                                 .tokenUsage(finalUsage)
                                 .finishReason(dev.langchain4j.model.output.FinishReason.STOP)
                                 .build();
@@ -276,5 +292,17 @@ public class RagServiceImpl implements RagService {
 
         // 3. 最后保底：硬编码模板（不推荐，但为容错提供）
         return "基于以下背景回答问题:\n{{context}}\n\n问题: {{question}}";
+    }
+
+    /**
+     * 构建 Agent Graph
+     */
+    private AgentGraph buildAgentGraph() {
+        return new AgentGraph()
+                .addNode(LlmProcessingNode.NAME, llmProcessingNode)
+                .addNode(ToolExecutingNode.NAME, toolExecutingNode)
+                .addEdge(LlmProcessingNode.NAME, ToolExecutingNode.NAME, null, null)
+                .addEdge(ToolExecutingNode.NAME, LlmProcessingNode.NAME, null, null)
+                .setEntryPoint(LlmProcessingNode.NAME);
     }
 }
